--- a/pages/storage.html
+++ b/pages/storage.html
@@ -257,11 +257,9 @@ desired effect
             <ul class="sidebar-menu">
                 <li class="header">HEADER</li>
                 <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="products.html"><i class="fa fa-link"></i> <span>Products</span></a></li>
-                <li ><a href="storage.html"><i class="fa fa-link"></i> <span>Storages</span></a></li>
+                <li><a href=products.html><i class="fa fa-link"></i> <span>Products</span></a></li>
+                <li class="active" ><a href="storage.html"><i class="fa fa-link"></i> <span>Storages</span></a></li>
                 <li ><a href="pointOfSales.html"><i class="fa fa-link"></i> <span>Point of Sales</span></a></li>
-
-
             </ul>
             <!-- /.sidebar-menu -->
         </section>
@@ -273,7 +271,7 @@ desired effect
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                Products
+                Storages
             </h1>
 
             <div class="row">
@@ -282,59 +280,37 @@ desired effect
                     <!-- general form elements -->
                     <div class="box box-primary">
                         <div class="box-header with-border">
-                            <h3 class="box-title">Create a product</h3>
+                            <h3 class="box-title">Create a storage</h3>
                         </div>
                         <!-- /.box-header -->
                         <!-- form start -->
-                        <form id ="product" role="form" onsubmit="return false">
+                        <form id ="storage" role="form" onsubmit="return false">
                             <div class="box-body">
                                 <div class="form-group">
                                     <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name" placeholder="Enter product name"  required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="price">Price</label>
-                                    <input type="number" class="form-control" id="price" placeholder="Enter a price (cents)" required >
-                                </div>
-                                <div class="form-group">
-                                    <label for="image">Image</label>
-                                    <input type="file" id="image">
-                                    <img id="thumb" src="" class = thumb>
-                                </div>
-                                <div class="form-group">
-                                    <label for="traySize">Tray size</label>
-                                    <input type="number" id="traySize" placeholder="1" required >
+                                    <input type="text" class="form-control" id="name" placeholder="Enter a storage name" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="ownerID">Owner</label>
                                     <input type="number" id="ownerID" placeholder="1" required>
                                 </div>
-                                <div class="form-group">
-                                    <label>Category</label>
-                                    <select class="form-control select2" style="width: 100%;" id="category" required>
-                                        <option selected="selected">Other</option>
-                                        <option>Drink</option>
-                                        <option>Food</option>
-                                        <option>Ticket</option>
-                                    </select>
-                                </div>
                             </div>
                             <!-- /.box-body -->
 
                             <div class="box-footer">
-                                <input id ="addButton" type="submit" class="btn btn-primary pull-right btn-lg" value="Create product">
+                                <input id ="addButton" type="submit" class="btn btn-primary pull-right btn-lg" value="Create storage">
                             </div>
                         </form>
                     </div>
                     <!-- /.box -->
 
-                    <!-- add Product Confirm Modal -->
-                    <div class="modal fade " id="addProductConfirm" tabindex="-1" role="dialog" aria-labelledby="addProductConfirm">
+                    <!-- add Storage Confirm Modal -->
+                    <div class="modal fade " id="addStorageConfirm" tabindex="-1" role="dialog" aria-labelledby="addStorageConfirm">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title" id="myModalLabel">Confirm that you want to create the following product?</h4>
+                                    <h4 class="modal-title" id="myModalLabel">Confirm that you want to create the following storage?</h4>
                                 </div>
                                 <div class="modal-body">
                                     <table class="table table-hover">
@@ -343,37 +319,21 @@ desired effect
                                             <td id="cname"></td>
                                         </tr>
                                         <tr>
-                                            <th>Price</th>
-                                            <td id="cprice"></td>
-                                        </tr>
-                                        <tr>
-                                            <th>Image</th>
-                                            <td id="cimage"><img id="thumbConfirm" class="thumb" src=""></td>
-                                        </tr>
-                                        <tr>
-                                            <th>TraySize</th>
-                                            <td id="ctraySize"></td>
-                                        </tr>
-                                        <tr>
                                             <th>Owner</th>
                                             <td id="cownerID"></td>
-                                        </tr>
-                                        <tr>
-                                            <th>Category</th>
-                                            <td id="ccategory"></td>
                                         </tr>
                                     </table>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="button" id="confirmAdd" class="btn btn-primary">Create product</button>
+                                    <button type="button" id="confirmAdd" class="btn btn-primary">Create storage</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--/ add Product Confirm Modal -->
+                    <!--/ add Storage Confirm Modal -->
 
-                    <!-- Owner not found modal -->
+                    <!-- Warning modal -->
                     <div class="modal modal-warning" id="modalWarning">
                         <div class="modal-dialog">
                             <div class="modal-content">
@@ -393,7 +353,7 @@ desired effect
                         </div>
                         <!-- /.modal-dialog -->
                     </div>
-                    <!--/  Owner not found modal -->
+                    <!--/  Warning modal -->
                     <!--  Success modal -->
                     <div class="modal modal-success"  id="modalSuccess">
                         <div class="modal-dialog">
@@ -447,19 +407,15 @@ desired effect
                         <div class="box box-primary">
 
                             <div class="box-header with-border">
-                                <h3 class="box-title">Products</h3>
-                                <input id ="editButton" type="submit" class="btn btn-primary" value="Edit product" style="border-color: transparent; margin-left: 20px">
+                                <h3 class="box-title">Storages</h3>
+                                <input id ="editButton" type="submit" class="btn btn-primary" value="Edit storage" style="border-color: transparent; margin-left: 20px">
                             </div>
                             <!-- /.box-header -->
                             <div class="box-body">
-                                <table id="products" class="table table-bordered table-hover">
+                                <table id="storages" class="table table-bordered table-hover">
                                     <thead>
                                     <tr>
                                         <th>Name</th>
-                                        <th>Price (in cents)</th>
-                                        <th>Image</th>
-                                        <th>TraySize</th>
-                                        <th>Category</th>
                                         <th>Owner</th>
                                         <th>Creation Date</th>
                                         <th>Last updated</th>
@@ -469,10 +425,6 @@ desired effect
                                     <tbody>
                                     <tr>
                                         <th>Name</th>
-                                        <th>Price (in cents)</th>
-                                        <th>Image</th>
-                                        <th>TraySize</th>
-                                        <th>Category</th>
                                         <th>Owner</th>
                                         <th>Creation Date</th>
                                         <th>Last updated</th>
@@ -487,46 +439,23 @@ desired effect
                     </div>
 
 
-                    <!-- edit Product Confirm Modal -->
-                    <div class="modal fade " id="editProductConfirm" tabindex="-1" role="dialog" aria-labelledby="editProductConfirm">
+                    <!-- edit storage Confirm Modal -->
+                    <div class="modal fade " id="editStorageConfirm" tabindex="-1" role="dialog" aria-labelledby="editStorageConfirm">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title" id="editModalLabel">Confirm that you want edit the product</h4>
+                                    <h4 class="modal-title" id="editModalLabel">Confirm that you want edit the storage</h4>
                                 </div>
                                 <div class="modal-body">
                                     <table class="table table-hover">
                                         <tr>
                                             <th>Name</th>
-                                            <td><input type="text" class="form-control" id="ename" placeholder="Enter product name"  required></td>
-                                        </tr>
-                                        <tr>
-                                            <th>Price</th>
-                                            <td><input type="number" class="form-control" id="eprice" placeholder="Enter product price"  required></td>
-                                        </tr>
-                                        <tr>
-                                            <th>Image</th>
-                                            <td><img class="thumb" id="eimage" src="">
-                                                <input type="file" id="newImage"></td>
-
-                                        </tr>
-                                        <tr>
-                                            <th>TraySize</th>
-                                            <td><input type="number" id="etraySize" placeholder="1" required ></td>
+                                            <td><input type="text" class="form-control" id="ename" placeholder="Enter storage name"  required></td>
                                         </tr>
                                         <tr>
                                             <th>Owner</th>
                                             <td><input type="number" id="eownerID" placeholder="1" required></td>
-                                        </tr>
-                                        <tr>
-                                            <th>Category</th>
-                                            <td> <select class="form-control select2" style="width: 100%;" id="ecategory" required>
-                                                <option selected="selected">Other</option>
-                                                <option>Drink</option>
-                                                <option>Food</option>
-                                                <option>Ticket</option>
-                                            </select></td>
                                         </tr>
                                         <tr>
                                             <th>Active</th>
@@ -539,12 +468,12 @@ desired effect
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="button" id="confirmEdit" class="btn btn-primary">Edit product</button>
+                                    <button type="button" id="confirmEdit" class="btn btn-primary">Edit storage</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--/ edit Product Confirm Modal -->
+                    <!--/ edit storage Confirm Modal -->
                 </div>
                 <!-- /.content -->
             </div>
@@ -564,7 +493,7 @@ desired effect
 </div>
 <!-- REQUIRED JS SCRIPTS -->
 <!-- Actions JS -->
-<script src="../dist/js/products/actions.js"></script>
+<script src="../dist/js/storage/actions.js"></script>
 <!-- jQuery 2.1.4 -->
 <script src="../plugins/jQuery/jQuery-2.1.4.min.js"></script>
 <!-- Bootstrap 3.3.5 -->
@@ -581,11 +510,9 @@ desired effect
 
 <script>
     $( document ).ready(function() {
-
         initializeTable();
-        addProductModalFunctionality();
-        editProductModalFunctionality();
-        pickedFileHandler();
+        addStorageModalFunctionality();
+        editStorageModalFunctionality();
     });
 
 </script>
