Added loading animation during loading multiple pages modal generalizeren in general.js inactive checkboxen product <-> storage open child rows with products in productStorage child rows product selectable in productStorage enable/disable buttons in productStorage

--- a/pages/products.html
+++ b/pages/products.html
@@ -229,7 +229,7 @@ desired effect
                 <!--/.col (left) -->
                 <!-- right column -->
                 <div class="col-md-9">
-                    <div class="box">
+                    <div class="box waitingAnimationApproved">
                         <div class="box box-primary">
 
                             <div class="box-header with-border">
@@ -246,7 +246,7 @@ desired effect
                                     <thead>
                                     <tr>
                                         <th>Name</th>
-                                        <th>Price (in cents)</th>
+                                        <th>Price (cents)</th>
                                         <th>Image</th>
                                         <th>TraySize</th>
                                         <th>Category</th>
@@ -259,7 +259,7 @@ desired effect
                                     <tbody>
                                     <tr>
                                         <th>Name</th>
-                                        <th>Price (in cents)</th>
+                                        <th>Price (cents)</th>
                                         <th>Image</th>
                                         <th>TraySize</th>
                                         <th>Category</th>
@@ -393,72 +393,6 @@ desired effect
         </div>
         <!--/ add Product Confirm Modal -->
 
-        <!-- Warning modal -->
-        <div class="modal modal-warning" id="modalWarning">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">Warning</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p id="warningText">Warning</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" data-dismiss="modal" class="btn btn-outline">Close</button>
-                    </div>
-                </div>
-                <!-- /.modal-content -->
-            </div>
-            <!-- /.modal-dialog -->
-        </div>
-        <!--/  Owner not found modal -->
-        <!--  Success modal -->
-        <div class="modal modal-success"  id="modalSuccess">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">Success</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p id="successText">Success</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-outline" data-dismiss="modal" onclick="location.reload()">Close</button>
-
-                    </div>
-                </div>
-                <!-- /.modal-content -->
-            </div>
-            <!-- /.modal-dialog -->
-        </div>
-        <!--  Success modal -->
-
-        <!--  Error modal -->
-        <div class="modal modal-danger" id="modalError">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">Error</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p id="errorText">Error</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-outline pull-left" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-outline">Save changes</button>
-                    </div>
-                </div>
-                <!-- /.modal-content -->
-            </div>
-            <!-- /.modal-dialog -->
-        </div>
-        <!-- / Error modal -->
     </div>
     <!-- Main Footer -->
     <footer class="main-footer">
@@ -500,7 +434,7 @@ desired effect
         editProductModalFunctionality();
         pickedFileHandler();
         checkBoxHandler();
-        filterDatabase(false);
+        templateModals();
     });
 
 </script>
