--- a/pages/pointOfSales.html
+++ b/pages/pointOfSales.html
@@ -164,7 +164,7 @@ desired effect
                 Points of Sales
             </h1>
 
-            <div class="row">
+            <div id="content" class="row">
                 <!-- left column -->
                 <div class="col-md-3">
                     <!-- general form elements -->
@@ -194,106 +194,11 @@ desired effect
                     </div>
                     <!-- /.box -->
 
-                    <!-- add Point of Sales Confirm Modal -->
-                    <div class="modal fade " id="addPointOfSalesConfirm" tabindex="-1" role="dialog" aria-labelledby="addPointOfSalesConfirm">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title" id="myModalLabel">Confirm that you want to create the following Point of Sales?</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <table class="table table-hover">
-                                        <tr>
-                                            <th>Name</th>
-                                            <td id="cname"></td>
-                                        </tr>
-                                        <tr>
-                                            <th>Owner</th>
-                                            <td id="cownerID"></td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="button" id="confirmAdd" class="btn btn-primary">Create Point of Sales</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--/ add Point of Sales Confirm Modal -->
-
-                    <!-- Warning modal -->
-                    <div class="modal modal-warning" id="modalWarning">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title">Warning</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <p id="warningText">Warning</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" data-dismiss="modal" class="btn btn-outline">Close</button>
-                                </div>
-                            </div>
-                            <!-- /.modal-content -->
-                        </div>
-                        <!-- /.modal-dialog -->
-                    </div>
-                    <!--/  Warning modal -->
-                    <!--  Success modal -->
-                    <div class="modal modal-success"  id="modalSuccess">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title">Success</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <p id="successText">Success</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-outline" data-dismiss="modal" onclick="location.reload()">Close</button>
-
-                                </div>
-                            </div>
-                            <!-- /.modal-content -->
-                        </div>
-                        <!-- /.modal-dialog -->
-                    </div>
-                    <!--  Success modal -->
-
-                    <!--  Error modal -->
-                    <div class="modal modal-danger" id="modalError">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title">Error</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <p id="errorText">Error</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-outline pull-left" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-outline">Save changes</button>
-                                </div>
-                            </div>
-                            <!-- /.modal-content -->
-                        </div>
-                        <!-- /.modal-dialog -->
-                    </div>
-                    <!-- / Error modal -->
                 </div>
                 <!--/.col (left) -->
                 <!-- right column -->
                 <div class="col-md-9">
-                    <div class="box">
+                    <div class="box waitingAnimationApproved">
                         <div class="box box-primary">
 
                             <div class="box-header with-border">
@@ -329,6 +234,34 @@ desired effect
                         <!-- /.box -->
                     </div>
 
+                    <!-- add Point of Sales Confirm Modal -->
+                    <div class="modal fade " id="addPointOfSalesConfirm" tabindex="-1" role="dialog" aria-labelledby="addPointOfSalesConfirm">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    <h4 class="modal-title" id="myModalLabel">Confirm that you want to create the following Point of Sales?</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <table class="table table-hover">
+                                        <tr>
+                                            <th>Name</th>
+                                            <td id="cname"></td>
+                                        </tr>
+                                        <tr>
+                                            <th>Owner</th>
+                                            <td id="cownerID"></td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="button" id="confirmAdd" class="btn btn-primary">Create Point of Sales</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/ add Point of Sales Confirm Modal -->
 
                     <!-- edit storage Confirm Modal -->
                     <div class="modal fade " id="editPointOfSalesConfirm" tabindex="-1" role="dialog" aria-labelledby="editPointOfSalesConfirm">
@@ -409,7 +342,7 @@ desired effect
         addPointOfSalesModalFunctionality();
         editPointOfSalesModalFunctionality();
         checkBoxHandler();
-        filterDatabase(false);
+        templateModals();
     });
 
 </script>
