Initial button functionality from product to storage.

--- a/pages/productsStorage.html
+++ b/pages/productsStorage.html
@@ -299,6 +299,7 @@ desired effect
         templateModals();
         storageTableFunctionality();
         productsTableFunctionality();
+        buttonHandler();
     });
 
 </script>
